# itp

./: .gitignore  .hlint.yaml  bld.sh  cabal.project  itp.cabal
bib/: argyros.bib  brent.bib  itp.bib  oliv.bib  sikorski.bib
src/Numeric/: ITP.lhs
